added jqplot, adapted json data for correct hight data representation