@@ -4,6 +4,7 @@ import java.awt.geom.Point2D;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.OutputStream;
+import java.text.DecimalFormat;
 import java.util.Iterator;
 
 import javax.imageio.ImageIO;
@@ -14,10 +15,13 @@ import org.json.JSONException;
 import org.json.JSONObject;
 
 import net.orxonox.gpr.TileRenderer;
+import net.orxonox.gpr.data.HeightProfileData;
+import net.orxonox.gpr.data.HeightProfileData.HeightTuple;
 import net.orxonox.gpr.data.MapsTile;
 import net.orxonox.gpr.data.MapsTileRequest;
 import net.orxonox.gpr.data.MapsTileRouteData;
 import net.orxonox.gpr.graph.BasicDirectedXYZNode;
+import net.orxonox.gpr.store.HeightProfileStore;
 import net.orxonox.gpr.store.MapTileStore;
 import net.orxonox.gpr.store.RouteStore;
 
@@ -27,9 +31,11 @@ import com.sun.net.httpserver.HttpExchange;
 public class GeoDataServer extends AbstractServer {
 
   private RouteStore routeStore;
+  private HeightProfileStore heightProfileStore;
 
-  public GeoDataServer(RouteStore routeStore) {
+  public GeoDataServer(RouteStore routeStore, HeightProfileStore heightProfileStore) {
     this.routeStore = routeStore;
+    this.heightProfileStore = heightProfileStore;
   }
 
 
@@ -81,22 +87,23 @@ public class GeoDataServer extends AbstractServer {
         new Point2D.Double(startLng, startLat), new Point2D.Double(endLng,
             endLat));
     MapsTileRouteData routeData = routeStore.aquire(descriptor);
+    HeightProfileData heightData = heightProfileStore.aquire(routeData);
+    
     
     JSONArray pathPoints = new JSONArray();
     
-    Iterator<BasicDirectedXYNode> iterator = routeData.getPath().iterator();
+    Iterator<HeightTuple> iterator = heightData.iterator();
     while(iterator.hasNext()) {
-      BasicDirectedXYZNode node = (BasicDirectedXYZNode)iterator.next();
-      node.getHeight();
+      HeightTuple tuple = iterator.next();
       
-      JSONObject pathPoint = new JSONObject();
-      try {
-        pathPoint.append("x", new Double(node.getCoordinate().x));
-        pathPoint.append("y", new Double(node.getCoordinate().y));
-        pathPoint.append("z", new Double(node.getHeight()));
-      } catch (JSONException e) {
-        e.printStackTrace();
-      }
+      JSONArray pathPoint = new JSONArray();
+      
+      DecimalFormat twoDForm = new DecimalFormat("#.##");
+      Double distanceFormated = Double.valueOf(twoDForm.format(tuple.getDistance() / 1000.0));
+
+      
+      pathPoint.put(distanceFormated);
+      pathPoint.put(new Double(tuple.getHeight()));
       pathPoints.put(pathPoint);
     }
     
